--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_search_result.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_course_search_result.xml
@@ -49,6 +49,13 @@
             android:text="@string/search" />
 
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center_horizontal"
+        android:layout_height="wrap_content" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh"
