--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_lesson.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_lesson.xml
@@ -12,5 +12,5 @@
         android:gravity="center_vertical"
         android:maxLines="1"
         android:text="TextView"
-        android:textColor="@color/Write" />
+        android:textColor="@color/text_black3" />
 </LinearLayout>
