--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_tab.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_tab.xml
@@ -6,9 +6,10 @@
 
     <TextView
         android:id="@+id/cfa_name"
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="10dp"
         android:background="@color/grey2"
         android:clickable="true"
         android:gravity="center"
