完成了APP课程部分的一些内容,修复平台资讯不显示的问题,上传了返回前端对象的VO类,上传新的接口列表文档

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_information.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_information.xml
@@ -24,8 +24,7 @@
                 android:id="@+id/iv_information_image"
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/aixinbanmaxian" />
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/tv_information_title"
