--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_learn.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/colorPrimary"
+        android:background="@mipmap/toubu"
         android:paddingTop="15dp">
 
         <TextView
