--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
@@ -7,7 +7,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@mipmap/my_top_bar"
+        android:background="@mipmap/toubu"
         android:paddingTop="15dp">
 
         <TextView
