--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_person.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_person.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/colorPrimary">
+        android:background="@mipmap/toubu3">
 
         <com.qmuiteam.qmui.widget.QMUIRadiusImageView
             android:id="@+id/iv_avatar"
@@ -18,7 +18,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="40dp"
             app:qmui_is_circle="true"
-            app:srcCompat="@drawable/header01" />
+            app:srcCompat="@drawable/header_01" />
 
         <TextView
             android:id="@+id/tv_name"
@@ -27,19 +27,19 @@
             android:layout_below="@+id/iv_avatar"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="20dp"
-            android:text="用户1"
+            android:text="荀况"
             android:textColor="@color/Write"
             android:textSize="18sp" />
 
         <ImageView
             android:id="@+id/iv_message"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentTop="true"
             android:layout_marginEnd="5dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="25dp"
             android:layout_toStartOf="@+id/tv_message_count"
-            app:srcCompat="@mipmap/message_grey_write" />
+            app:srcCompat="@mipmap/header_message" />
 
         <TextView
             android:id="@+id/tv_message_count"
@@ -49,10 +49,96 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="27dp"
             android:text="2"
             android:textColor="@color/Write" />
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/line_d6" />
+
+    <RelativeLayout
+        android:id="@+id/re_learn_like"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/btn_list_item_bg">
+
+        <ImageView
+            android:id="@+id/ImageView07"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:alpha="0.2"
+            android:src="@mipmap/cd1" />
+
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:src="@mipmap/left_like" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/imageView7"
+            android:text="@string/learn_like" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/line_d6" />
+
+    <RelativeLayout
+        android:id="@+id/re_discover"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/btn_list_item_bg">
+
+        <ImageView
+            android:id="@+id/ImageView08"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:alpha="0.2"
+            android:src="@mipmap/cd1" />
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:src="@mipmap/left_discover" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/imageView8"
+            android:text="@string/discover_course" />
+
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.1dp"
+        android:background="@color/line_d6" />
 
     <View
         android:layout_width="match_parent"
@@ -82,7 +168,7 @@
             android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:src="@mipmap/left_setting_grey" />
+            android:src="@mipmap/left_wallet" />
 
         <TextView
             android:id="@+id/textView3"
@@ -118,11 +204,11 @@
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:src="@mipmap/left_setting_grey" />
+            android:src="@mipmap/left_ability" />
 
         <TextView
             android:id="@+id/textView5"
@@ -139,93 +225,6 @@
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
         android:background="@color/line_d6" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/line_d6" />
-
-    <RelativeLayout
-        android:id="@+id/re_help"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/btn_list_item_bg">
-
-        <ImageView
-            android:id="@+id/ImageView07"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:alpha="0.2"
-            android:src="@mipmap/cd1" />
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
-            android:src="@mipmap/left_setting_grey" />
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/imageView7"
-            android:text="@string/use_help" />
-
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/line_d6" />
-
-    <RelativeLayout
-        android:id="@+id/re_advice"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/btn_list_item_bg">
-
-        <ImageView
-            android:id="@+id/ImageView08"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:alpha="0.2"
-            android:src="@mipmap/cd1" />
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
-            android:src="@mipmap/left_setting_grey" />
-
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@+id/imageView8"
-            android:text="@string/advice" />
-
-    </RelativeLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/line_d6" />
-
 
     <View
         android:layout_width="match_parent"
