--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_school.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_school.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/colorPrimary"
+        android:background="@mipmap/toubu"
         android:paddingTop="15dp">
 
         <TextView
@@ -45,6 +45,7 @@
                     android:layout_marginLeft="20dp"
                     app:qmui_border_width="0dp"
                     app:qmui_is_circle="true"
+                    app:qmui_border_color="@color/Write"
                     app:srcCompat="@drawable/newmsg01" />
 
                 <TextView
