修改了一些Android学生端的页面，修改了S3的文档

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_lesson_learn.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_lesson_learn.xml
@@ -25,16 +25,10 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="@string/ability"
+            android:text=""
             android:textColor="@color/qmui_config_color_white"
             android:textSize="18sp" />
 
     </RelativeLayout>
-
-    <com.fstech.yzedusc.view.RadoView
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="50dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
 </LinearLayout>
