修改PPt，完成APP任务模块显示

--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_my_task.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_my_task.xml
@@ -30,16 +30,83 @@
             android:textSize="18sp" />
     </RelativeLayout>
 
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/smart_refresh"
+    <TabHost
+        android:id="@+id/task_tab"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/lv_my_course"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@color/grey0"
+            android:orientation="vertical">
 
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:background="@color/Write"></TabWidget>
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <LinearLayout
+                    android:id="@+id/ll_doing_task"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/grey9"
+                    android:orientation="vertical">
+
+                    <ListView
+                        android:id="@+id/lv_doing_task"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:divider="@color/Write"
+                        android:dividerHeight="0dp">
+                    </ListView>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_all_task"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/grey9"
+                    android:orientation="vertical">
+
+                    <ListView
+                        android:id="@+id/lv_all_task"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:divider="@color/Write"
+                        android:dividerHeight="0dp">
+                    </ListView>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/ll_finish_task"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/grey9"
+                    android:orientation="vertical">
+
+                    <ListView
+                        android:id="@+id/lv_finish_task"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:divider="@color/Write"
+                        android:dividerHeight="0dp">
+                    </ListView>
+
+                </LinearLayout>
+
+
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>
 
 </LinearLayout>
