--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_grade_query.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_grade_query.xml
@@ -30,13 +30,35 @@
             android:textSize="18sp" />
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/Write"
+        android:orientation="horizontal">
+
+        <com.fstech.yzedusc.view.ClearEditText
+            android:id="@+id/et_search"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_weight="1"
+            android:background="@color/grey0"
+            android:gravity="center"
+            android:hint="@string/input_search_content"
+            android:textColor="@color/text_black3"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/smart_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/lv_my_course"
+            android:id="@+id/lv_my_grade"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
