--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_messge.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/activity_messge.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -28,6 +29,15 @@
             android:text="@string/message"
             android:textColor="@color/qmui_config_color_white"
             android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="15dp"
+            app:srcCompat="@drawable/ic_delete" />
 
     </RelativeLayout>
 
