--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_live_room.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/item_live_room.xml
@@ -49,12 +49,13 @@
                     android:textColor="@color/qmui_config_color_white" />
             </LinearLayout>
 
-            <com.qmuiteam.qmui.widget.QMUIRadiusImageView
+            <com.fstech.yzedusc.view.RectangleView
                 android:id="@+id/item_live_iv_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:layout_weight="1"
                 app:qmui_corner_radius="@dimen/dimen_9dp"
                 app:qmui_is_circle="false"
                 app:srcCompat="@drawable/springmvc" />
