--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/colors.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="line_d6">#d6d6d6</color>
     <color name="black_cover_alpha">#50000000</color>
     <color name="color_green_like">#34B8AD</color>
+    <color name="grey_blue">#7B99B2</color>
 
 </resources>
