--- a/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
+++ b/代码类/Android前端/YZEduStudentClient/app/src/main/res/layout/fragment_main.xml
@@ -30,12 +30,12 @@
         android:id="@+id/sv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/mainBackground">
+        android:background="@color/grey9">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/mainBackground"
+            android:background="@color/grey9"
             android:orientation="vertical">
 
             <com.oragee.banners.BannerView
@@ -57,7 +57,7 @@
                 android:id="@+id/re_more_top"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@color/mainBackground">
+                android:background="@color/grey9">
 
                 <TextView
                     android:id="@+id/textView4"
