--- a/代码类/Android前端/YZEduTeacherClient /app/src/main/res/layout/fragment_teach.xml
+++ b/代码类/Android前端/YZEduTeacherClient /app/src/main/res/layout/fragment_teach.xml
@@ -225,7 +225,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="80dp"
-                        android:text="@string/grade_query"
+                        android:text="@string/my_correct"
                         android:textSize="13dp" />
                 </RelativeLayout>
 
